保存本地更改1
重命名并更新源文件，增加注释文件

将 `lean01-1.cpp` 重命名为 `lean01-1输出.cpp`，并修改为 `main1` 函数。新增 `lean01-2注释.cpp` 文件，包含新的 `main` 函数，输出程序执行失败的消息。更新项目文件和过滤器以反映这些更改。

重命名并更新源文件，增加新文件

将 `lean01-1.cpp` 重命名为 `lean01-1输出.cpp`，并修改为 `main1` 函数。新增 `lean01-2注释.cpp` 文件，包含新的 `main` 函数和不同的输出信息。更新项目文件和过滤器以反映这些更改。

重构源文件并添加注释

在 `lean01-1.cpp` 中删除原有代码，替换为 `lean01-1输出.cpp`，函数名更改为 `main1`。更新项目文件 `lean01.vcxproj` 和过滤器文件 `lean01.vcxproj.filters`，添加新文件 `lean01-1输出.cpp` 和 `lean01-2注释.cpp`，移除对旧文件的引用。新增文件包含标准输入输出库，并在 `lean01-2注释.cpp` 中添加了功能注释。

添加新源文件并更新项目配置

在 `lean01.vcxproj` 中添加了三个新源文件：`lean01-3变量与常量.cpp`、`lean01-4关键字与标识符.cpp` 和 `lean01-5数据类型.cpp`。
更新 `lean01.vcxproj.filters`，移除原有“源文件”过滤器，添加“我超，源”过滤器并归入相关源文件。
新增的源文件分别演示了变量定义、合法与非法标识符，以及数据类型的注释说明。
AI真是太好用了 Hou useful AI is

--- a/lean01.vcxproj
+++ b/lean01.vcxproj
@@ -123,7 +123,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="lean01-1.cpp" />
+    <ClCompile Include="lean01-1输出.cpp" />
+    <ClCompile Include="lean01-2注释.cpp" />
+    <ClCompile Include="lean01-3变量与常量.cpp" />
+    <ClCompile Include="lean01-4关键字与标识符.cpp" />
+    <ClCompile Include="lean01-5数据类型.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
