人工帮写说明已经达到次数限制了，我自己来吧。这次提交增添了一些比较基本的知识，都是认识类的，其中夹杂着一些超纲知识，是ds提供的。总的来说，还没进入写程序的步骤。

--- a/lean01.vcxproj
+++ b/lean01.vcxproj
@@ -123,11 +123,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="lean01-10比较运算符和逻辑运算符.cpp" />
     <ClCompile Include="lean01-1输出.cpp" />
     <ClCompile Include="lean01-2注释.cpp" />
     <ClCompile Include="lean01-3变量与常量.cpp" />
     <ClCompile Include="lean01-4关键字与标识符.cpp" />
     <ClCompile Include="lean01-5数据类型.cpp" />
+    <ClCompile Include="lean01-6字符串型.cpp" />
+    <ClCompile Include="lean01-7布尔类型.cpp" />
+    <ClCompile Include="lean01-9算术运算符与赋值运算符.cpp" />
+    <ClCompile Include="lean1-08输入.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
