新增了部分运算符的介绍和if的用法，位运算暂时没有涉及。此外，在每个源文件的开头添加了索引标签，这样如果静态函数设错了，可以马上发现是哪个源文件正在执行main函数。

--- a/lean01.vcxproj
+++ b/lean01.vcxproj
@@ -124,6 +124,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lean01-10比较运算符和逻辑运算符.cpp" />
+    <ClCompile Include="lean01-11选择结构之if单多行.cpp" />
+    <ClCompile Include="lean01-12if的多条件与嵌套.cpp" />
     <ClCompile Include="lean01-1输出.cpp" />
     <ClCompile Include="lean01-2注释.cpp" />
     <ClCompile Include="lean01-3变量与常量.cpp" />
