--- a/lean01.vcxproj
+++ b/lean01.vcxproj
@@ -126,7 +126,18 @@
     <ClCompile Include="lean01-10比较运算符和逻辑运算符.cpp" />
     <ClCompile Include="lean01-11选择结构之if单多行.cpp" />
     <ClCompile Include="lean01-12if的多条件与嵌套.cpp" />
+    <ClCompile Include="lean01-13选择结构之三目运算符.cpp" />
+    <ClCompile Include="lean01-14三目运算符的实验.cpp" />
+    <ClCompile Include="lean01-15选择结构之switch.cpp" />
+    <ClCompile Include="lean01-16恭喜隔壁有情人！.cpp" />
+    <ClCompile Include="lean01-17循环结构之while.cpp" />
+    <ClCompile Include="lean01-18循环结构之do while.cpp" />
+    <ClCompile Include="lean01-19循环结构之for循环.cpp" />
     <ClCompile Include="lean01-1输出.cpp" />
+    <ClCompile Include="lean01-20嵌套结构.cpp" />
+    <ClCompile Include="lean01-21跳转语句之break.cpp" />
+    <ClCompile Include="lean01-22跳转语句之continue.cpp" />
+    <ClCompile Include="lean01-23跳转语句之goto.cpp" />
     <ClCompile Include="lean01-2注释.cpp" />
     <ClCompile Include="lean01-3变量与常量.cpp" />
     <ClCompile Include="lean01-4关键字与标识符.cpp" />
