--- a/lean02/lean02.vcxproj
+++ b/lean02/lean02.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{faf76f7f-2de8-465f-816a-a48849818633}</ProjectGuid>
     <RootNamespace>lean02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>lean02函数</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
